[gd_scene load_steps=30 format=3 uid="uid://bbr60oq3xovsq"]

[ext_resource type="Script" path="res://scenes/players/base_character.gd" id="1_dy70s"]
[ext_resource type="Texture2D" uid="uid://bcg78elt0o1vu" path="res://assets/graphics/players/base.png" id="1_wef3n"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_uw4vx"]
radius = 2.0
height = 14.0

[sub_resource type="Animation" id="Animation_57stn"]
resource_name = "cast_down"
length = 0.6
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [48, 49, 50]
}

[sub_resource type="Animation" id="Animation_67gsy"]
resource_name = "cast_left"
length = 0.6
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [51, 52, 53]
}

[sub_resource type="Animation" id="Animation_0heno"]
resource_name = "cast_right"
length = 0.6
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [54, 55, 56]
}

[sub_resource type="Animation" id="Animation_hde8j"]
resource_name = "cast_up"
length = 0.6
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [57, 58, 59]
}

[sub_resource type="Animation" id="Animation_0jgrp"]
resource_name = "punch_down"
length = 0.6
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [24, 25, 26]
}

[sub_resource type="Animation" id="Animation_vp10f"]
resource_name = "punch_left"
length = 0.6
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [27, 28, 29]
}

[sub_resource type="Animation" id="Animation_yd3va"]
resource_name = "punch_right"
length = 0.6
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [30, 31, 32]
}

[sub_resource type="Animation" id="Animation_i062q"]
resource_name = "punch_up"
length = 0.6
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [33, 34, 35]
}

[sub_resource type="Animation" id="Animation_ta1ju"]
resource_name = "sword_down"
length = 0.6
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [36, 37, 38]
}

[sub_resource type="Animation" id="Animation_6hxec"]
resource_name = "sword_left"
length = 0.6
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [39, 40, 41]
}

[sub_resource type="Animation" id="Animation_76iru"]
resource_name = "sword_right"
length = 0.6
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [42, 43, 44]
}

[sub_resource type="Animation" id="Animation_2kug4"]
resource_name = "sword_up"
length = 0.6
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [45, 46, 47]
}

[sub_resource type="Animation" id="Animation_vodbt"]
resource_name = "idle_down"
length = 0.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_ufojn"]
resource_name = "idle_left"
length = 0.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_51mrc"]
resource_name = "idle_right"
length = 0.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}

[sub_resource type="Animation" id="Animation_7v3br"]
resource_name = "idle_up"
length = 0.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}

[sub_resource type="Animation" id="Animation_2lcvc"]
resource_name = "walking_down"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1]
}

[sub_resource type="Animation" id="Animation_pmj0q"]
resource_name = "walking_down_left"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 13]
}

[sub_resource type="Animation" id="Animation_r13au"]
resource_name = "walking_down_right"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [15, 16, 17, 16]
}

[sub_resource type="Animation" id="Animation_0lw42"]
resource_name = "walking_left"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [3, 4, 5, 4]
}

[sub_resource type="Animation" id="Animation_3bppu"]
resource_name = "walking_right"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 7]
}

[sub_resource type="Animation" id="Animation_krlpo"]
resource_name = "walking_up"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [9, 10, 11, 10]
}

[sub_resource type="Animation" id="Animation_hwj6l"]
resource_name = "walking_up_left"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 19]
}

[sub_resource type="Animation" id="Animation_3g86l"]
resource_name = "walking_up_right"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [21, 22, 23, 22]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o6esg"]
_data = {
"attack_cast_down": SubResource("Animation_57stn"),
"attack_cast_left": SubResource("Animation_67gsy"),
"attack_cast_right": SubResource("Animation_0heno"),
"attack_cast_up": SubResource("Animation_hde8j"),
"attack_punch_down": SubResource("Animation_0jgrp"),
"attack_punch_left": SubResource("Animation_vp10f"),
"attack_punch_right": SubResource("Animation_yd3va"),
"attack_punch_up": SubResource("Animation_i062q"),
"attack_sword_down": SubResource("Animation_ta1ju"),
"attack_sword_left": SubResource("Animation_6hxec"),
"attack_sword_right": SubResource("Animation_76iru"),
"attack_sword_up": SubResource("Animation_2kug4"),
"idle_down": SubResource("Animation_vodbt"),
"idle_left": SubResource("Animation_ufojn"),
"idle_right": SubResource("Animation_51mrc"),
"idle_up": SubResource("Animation_7v3br"),
"walking_down": SubResource("Animation_2lcvc"),
"walking_down_left": SubResource("Animation_pmj0q"),
"walking_down_right": SubResource("Animation_r13au"),
"walking_left": SubResource("Animation_0lw42"),
"walking_right": SubResource("Animation_3bppu"),
"walking_up": SubResource("Animation_krlpo"),
"walking_up_left": SubResource("Animation_hwj6l"),
"walking_up_right": SubResource("Animation_3g86l")
}

[sub_resource type="LabelSettings" id="LabelSettings_ulvd3"]
font_size = 20
outline_size = 10
outline_color = Color(0.154325, 0.189169, 0.2145, 1)
shadow_size = 0

[node name="BaseCharacter" type="CharacterBody2D" node_paths=PackedStringArray("_animation_player", "_player_name", "_camera")]
motion_mode = 1
platform_on_leave = 2
script = ExtResource("1_dy70s")
_animation_player = NodePath("AnimationPlayer")
_player_name = NodePath("PlayerName")
_camera = NodePath("Camera")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(0, -14)
scale = Vector2(2, 2)
texture = ExtResource("1_wef3n")
hframes = 12
vframes = 5
frame = 1

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_uw4vx")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_o6esg")
}

[node name="PlayerName" type="Label" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -19.0
offset_top = -42.0
offset_right = 58.0
offset_bottom = -14.0
grow_vertical = 0
scale = Vector2(0.5, 0.5)
size_flags_horizontal = 4
label_settings = SubResource("LabelSettings_ulvd3")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Camera" type="Camera2D" parent="."]
zoom = Vector2(1.5, 1.5)

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_animation_finished"]
